---- Changes since 3.72 ----
Updated the Plans script installer to 8.0.4, and Movable Type to 4.31.
On Sendmail systems with outgoing address mapping enabled, the generic domains file is now correctly updated.
Script installer versions more recent that those included with the current release of Virtualmin can now be downloaded using the Installer Updates section on the Script Installers page. The new versions will typically be released within hours or days of new script releases.
Added a domain-owner leven restriction to prevent changing of a virtual server's password.
Put back support for installing Joomla 1.0 series versions.
---- Changes since 3.73 ----
Updated the Horde Passwd script installer to h3-3.1.1, PHPCoin to 1.6.5, OpenGoo to 1.5.3, LimeSurvey to 1.85plus-build7561-20090902, TextPattern to 4.2.0, CMS Made Simple to 1.6.5, phpMyFAQ to 2.0.17, TWiki to 4.3.2, Rails to 2.3.4, Radiant to 0.8.1, MoinMoin to 1.8.5, SugarCRM to 5.2.0j, Bugzilla to 3.4.2, phpMyAdmin to 3.2.2, Roundcube to 0.3-stable, Redmine to 0.8.5, Drupal to 6.14 and 5.20, Magento to 1.3.2.4, and Plans to 8.0.9.
Updated Horde to version 3.3.4, and all sub-applications to their latest versions.
Added a script installer for the eXtplorer AJAX file manager, version 2.0.1.
If Postfix relay domains are stored in a hash, update it instead of adding to relay_domains in /etc/postfix/main.cf.
Additional allowed MySQL client hosts are now included in backups.
Added a warning to the configuration check for systems behind a NAT gateway with an incorrectly configured DNS IP address.
Added options to the Module Config page for selecting which columns appear on the List Virtual Servers page, including new ones like the reseller, email address and extra admins.
The contents of mailboxes from Windows Plesk backups are now properly migrated.
Updated the French translation, thanks to Houssin Regis.
Added the modify-php-ini API command to update PHP variables in one or more virtual servers at once.