@@ -464,6 +464,10 @@ setup_ssl=Adding new SSL virtual website ..
 setup_esslportclash=IP address $1 and port $2 are being used by $3
 setup_esslcopy=.. could not find non-SSL virtual website to copy directives from!
 setup_eopenssl=.. openssl failed! $1
+setup_esslmatch=.. certificate and key do not match : $1
+setup_esslcert=.. certificate file is not valid : $1
+setup_esslkey=.. key file is not valid : $1
+setup_esslca=.. certificate authority file is not valid : $1
 setup_webpid=Applying web server configuration ..
 setup_webpid2=Stopping and re-starting web server ..
 setup_webfailed=.. failed! An Apache configuration error was detected : $1
